[package]
name = "proptest-arbitrary-interop"
description = "Interop glue between arbitrary and proptest crates"
authors = ["Graydon Hoare <graydon@pobox.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["property", "propcheck", "arbitrary", "fuzz", "testing"]
readme = "README.md"

[dependencies]
arbitrary = "1.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = "1.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
proptest = { version = "1.7.0", default-features = false, features = ["std"] }
# convince getrandom to build for wasm target.
# note that there is also a flag in .cargo/config.toml
getrandom = { version = "0.3", features = ["wasm_js"] }
